# jupyter_kernels

./: .gitattributes  .gitignore  README.md
clang_repl_kernel/: .gitignore  0.install_jupyter.bat  0.install_jupyter.sh  2.launch_jupyter.bat  2.launch_jupyter.sh  3.uninstall.bat  3.uninstall.sh  4.build.bat  4.build.sh  5.publish.bat  5.publish.sh  6.install_from_pip.bat  6.install_from_pip.sh  README.md  README.rst  additiona_info.md  hatch_build.py  hello.ipynb  pyproject.toml  requirements.txt  test_main.py
clang_repl_kernel/clang_repl_kernel/: .gitattributes  __init__.py  __main__.py  downloader.py  install.py  kernel.py  requirements.txt  test_kernel.py
clang_repl_kernel/clang_repl_kernel/Linux/: clang-repl  print.cpp  print.hpp
echo_kernel/: README.rst  hatch_build.py  pyproject.toml  test_main.py  uninstall.sh
echo_kernel/my_echo_kernel/: __init__.py  __main__.py  install.py  kernel.py
shell_echo_kernel/: LICENSE  README.rst  build_echo_cpp.bat  build_echo_cpp.sh  clang-repl  echo.cpp  hatch_build.py  install.sh  output.txt  pyproject.toml  test.py  test_main.py  uninstall.sh
shell_echo_kernel/shell_echo_kernel/: __init__.py  __main__.py  install.py  kernel.py  test_kernel.py
