[build-system]
requires = [
    "hatchling>=1.10.0", "ipykernel"
]
build-backend = "hatchling.build"

[project]
name = "my-echo-kernel"
dynamic = [
    "version",
]
description = "Simple example kernel for Jupyter"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ipykernel",
    "jupyter_client",
]

#[project.optional-dependencies]
#test = [
#  "jupyter_kernel_test",
#]

[project.urls]
Homepage = ""

[tool.hatch.version]
path = "my_echo_kernel/__init__.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]


[tool.hatch.build.targets.sdist]
include = [
    "/my_echo_kernel",
]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec/share" = "share"